welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:17: error: not found: value i
        t(i)=valeur
          ^golomb:7: error: type mismatch;
 found   : Unit
 required: Int
  while(compteur < num){
  ^